--- a/src/XPatchLib.Json/XPatchLib.Json.csproj
+++ b/src/XPatchLib.Json/XPatchLib.Json.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -47,11 +48,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="XPatchLib, Version=2.0.0.33, Culture=neutral, PublicKeyToken=ba48c1962d234d2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\XPatchLib.2.0.0.33\lib\net40\XPatchLib.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\XPatchLib.Net\src\Bin\XPatchLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JsonSerializeSetting.cs" />
+    <Compile Include="JsonTextWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
