--- a/src/XPatchLib.Json.UnitTest/XPatchLib.Json.UnitTest.csproj
+++ b/src/XPatchLib.Json.UnitTest/XPatchLib.Json.UnitTest.csproj
@@ -8,8 +8,8 @@
     <DebugType Condition="'$(TargetFramework)' != '' AND '$(TargetFramework)' != 'netcoreapp1.0' AND '$(TargetFramework)' != 'netcoreapp1.1'">Full</DebugType>
     <ProjectGuid>798b9aac-6fca-4dfc-9526-45c78cd0c63d</ProjectGuid>
     <NoWarn>1701;1702;1705;0659</NoWarn>
-    <RootNamespace>XPatchLib.Json.UntiTest</RootNamespace>
-    <AssemblyName>XPatchLib.Json.UntiTest</AssemblyName>
+    <RootNamespace>XPatchLib.Json.UnitTest</RootNamespace>
+    <AssemblyName>XPatchLib.Json.UnitTest</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'!='netcoreapp1.0' OR '$(TargetFramework)'!='netcoreapp1.1'">
