修改项目描述

--- a/src/XPatchLib.Json/XPatchLib.Json.csproj
+++ b/src/XPatchLib.Json/XPatchLib.Json.csproj
@@ -4,18 +4,18 @@
     <TargetFrameworks Condition="'$(LibraryFrameworks)'==''">net20;net35;net40;netstandard1.0;netstandard1.3</TargetFrameworks>
     <TargetFrameworks Condition="'$(LibraryFrameworks)'!=''">$(LibraryFrameworks)</TargetFrameworks>
     <!--<TargetFramework>NET40</TargetFramework>-->
-    <Description>Patch Serialization Library for the .Net</Description>
+    <Description>Incremental serializer extension for Json format.</Description>
     <Company />
     <Authors>Qiang Gu</Authors>
-    <FileVersion>0.0.0.16</FileVersion>
-    <VersionPrefix>0.0.0.16</VersionPrefix>
+    <FileVersion>0.0.0.17</FileVersion>
+    <VersionPrefix>0.0.0.17</VersionPrefix>
     <VersionSuffix Condition="'$(Configuration)'=='Debug'">DEBUG</VersionSuffix>
-    <PackageLicenseUrl>https://github.com/GuQiangJS/XPatchLib.Net/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/GuQiangJS/XPatchLib.Net</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/GuQiangJS/XPatchLib.Net.Json/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/GuQiangJS/XPatchLib.Net.Json</PackageProjectUrl>
     <NeutralLanguage>zh-Hans</NeutralLanguage>
     <Copyright>Copyright © 2013-2017 - GuQiang</Copyright>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-    <PackageTags>Serialization Patch Json</PackageTags>
+    <PackageTags>Serialization Incremental Patch Json</PackageTags>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\XPatchLib.Json.xml</DocumentationFile>
     <RootNamespace>XPatchLib</RootNamespace>
