--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ src/XPatchLib.Json/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 /src/XPatchLib.Json.UntiTest/obj
 /src/XPatchLib.Json.UnitTest/bin/Release
 /src/XPatchLib.Json.UnitTest/obj
+/src/XPatchLib.Json/obj/XPatchLib.Json.0.0.0.17.nuspec
+/src/XPatchLib.Json/obj/XPatchLib.Json.0.0.0.16.nuspec
