--- a/src/XPatchLib.Json.UnitTest/XPatchLib.Json.UnitTest.csproj
+++ b/src/XPatchLib.Json.UnitTest/XPatchLib.Json.UnitTest.csproj
@@ -2,19 +2,19 @@
 
   <PropertyGroup>
 
-    <TargetFrameworks Condition="'$(TestFrameworks)'==''">NET40;NET35;NET20;NETCOREAPP1.0;NETCOREAPP1.1</TargetFrameworks>
+    <TargetFrameworks Condition="'$(TestFrameworks)'==''">NET40;NET35;NET20;NETCOREAPP1.0;NETCOREAPP1.1;NETCOREAPP2.0</TargetFrameworks>
     <!--<TargetFramework>NET40</TargetFramework>-->
     <!-- Workaround for https://github.com/nunit/nunit3-vs-adapter/issues/296 -->
-    <DebugType Condition="'$(TargetFramework)' != '' AND '$(TargetFramework)' != 'netcoreapp1.0' AND '$(TargetFramework)' != 'netcoreapp1.1'">Full</DebugType>
+    <DebugType Condition="'$(TargetFramework)' != '' AND '$(TargetFramework)' != 'netcoreapp1.0' AND '$(TargetFramework)' != 'netcoreapp1.1' AND '$(TargetFramework)' != 'netcoreapp2.0'">Full</DebugType>
     <ProjectGuid>798b9aac-6fca-4dfc-9526-45c78cd0c63d</ProjectGuid>
     <NoWarn>1701;1702;1705;0659</NoWarn>
     <RootNamespace>XPatchLib.Json.UnitTest</RootNamespace>
     <AssemblyName>XPatchLib.Json.UnitTest</AssemblyName>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'!='netcoreapp1.0' OR '$(TargetFramework)'!='netcoreapp1.1'">
-    <PackageReference Include="NUnit" Version="3.7.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.8.0-alpha1" />
+  <ItemGroup Condition="'$(TargetFramework)'!='netcoreapp1.0' OR '$(TargetFramework)'!='netcoreapp1.1' OR '$(TargetFramework)'!='netcoreapp2.0'">
+    <PackageReference Include="NUnit" Version="3.8.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'=='NET40' OR '$(TargetFramework)'=='NET35' OR '$(TargetFramework)'=='NET46'">
     <Reference Include="WindowsBase" />
@@ -32,12 +32,12 @@
     <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp1.0' OR '$(TargetFramework)'=='netcoreapp1.1'">
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+  <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp1.0' OR '$(TargetFramework)'=='netcoreapp1.1' OR '$(TargetFramework)'=='netcoreapp2.0'">
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp1.1'">
+  <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp1.1' OR '$(TargetFramework)'=='netcoreapp2.0'">
     <PackageReference Include="BenchmarkDotNet" Version="0.10.8" />
   </ItemGroup>
   <PropertyGroup Condition="'$(TargetFramework)'=='net20'">
@@ -66,13 +66,18 @@
     <ReferringTargetFrameworkForProjectReferences>.NETStandard,Version=v1.0</ReferringTargetFrameworkForProjectReferences>
     <DefineConstants>NETSTANDARD;XUNIT;NETSTANDARD_1_0;NETSTANDARD_1_0_UP</DefineConstants>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+    <AssemblyTitle>XPatchLib UnitTest .NET Standard 2.0</AssemblyTitle>
+    <ReferringTargetFrameworkForProjectReferences>.NETStandard,Version=v2.0</ReferringTargetFrameworkForProjectReferences>
+    <DefineConstants>NETSTANDARD;XUNIT;BENCHMARK;NETSTANDARD_2_0;NETSTANDARD_1_0_UP;NETSTANDARD_1_1_UP;NETSTANDARD_1_2_UP;NETSTANDARD_1_3_UP;NETSTANDARD_2_0_UP</DefineConstants>
+  </PropertyGroup>
   
   
   <ItemGroup>
     <ProjectReference Include="..\XPatchLib.Json\XPatchLib.Json.csproj" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
-    <PackageReference Include="XPatchLib" Version="3.0.5.10" />
+    <PackageReference Include="XPatchLib" Version="3.0.5.12" />
   </ItemGroup>
   <!--<ItemGroup>
     <ProjectReference Include="..\XPatchLib.Json\XPatchLib.Json.csproj" />
