增加合并不完整增量的单元测试

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ src/XPatchLib.Json/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 /src/XPatchLib.Json/obj/XPatchLib.Json.0.0.0.16.nuspec
 /src/.vs/XPatchLib.Json/v15/Server/sqlite3
 /src/XPatchLib.Json/obj
+src/.vs/XPatchLib.Json/v15/.suo
+src/.vs/XPatchLib.Json/v15/.suo
+src/XPatchLib.Json.sln.DotSettings.user
+src/XPatchLib.Json/obj/XPatchLib.Json.csproj.nuget.g.props
+src/XPatchLib.Json/obj/project.assets.json
+src/XPatchLib.Json/obj/XPatchLib.Json.csproj.nuget.g.targets
