--- a/src/XPatchLib.Json.UnitTest/XPatchLib.Json.UnitTest.csproj
+++ b/src/XPatchLib.Json.UnitTest/XPatchLib.Json.UnitTest.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="XPatchLib" Version="4.0.2.3" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp1.1' OR '$(TargetFramework)'=='netcoreapp2.0'">
     <PackageReference Include="BenchmarkDotNet" Version="0.10.8" />
